// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stringifyProperty stringifies expectedly 1`] = `"type = \\"A\\""`;

exports[`stringifyProperty stringifies expectedly 2`] = `"ttl = 300"`;

exports[`stringifyProperty stringifies expectedly 3`] = `"subnet_id = aws_subnet.my-subnet.id"`;

exports[`stringifyProperty stringifies expectedly 4`] = `"myProperty = null"`;

exports[`stringifyProperty stringifies expectedly 5`] = `
"terraform {
  required_version = \\">= 0.12\\"
}"
`;

exports[`stringifyProperty stringifies expectedly 6`] = `
"terraform {

  required_version = \\">= 0.12\\"

}"
`;

exports[`stringifyProperty stringifies expectedly 7`] = `
"records = [
  aws_route53_zone.summerfestival_co_nz.name_servers.0,
  aws_route53_zone.summerfestival_co_nz.name_servers.1,
  aws_route53_zone.summerfestival_co_nz.name_servers.2,
  aws_route53_zone.summerfestival_co_nz.name_servers.3,
]"
`;

exports[`stringifyProperty stringifies expectedly 8`] = `
"records = [
  aws_route53_zone.summerfestival_co_nz.name_servers.0,
  null,
  aws_route53_zone.summerfestival_co_nz.name_servers.1,
  null,
  aws_route53_zone.summerfestival_co_nz.name_servers.2,
  aws_route53_zone.summerfestival_co_nz.name_servers.3,
]"
`;
